# embedded-projs

./: README.md
LTE_Breakout_Test/: .cproject  .mxproject  .project  LTE_Breakout_Test.ioc  STM32F415RGTX_FLASH.ld  STM32F415RGTX_RAM.ld
LTE_Breakout_Test/Core/Inc/: main.h  stm32f4xx_hal_conf.h
LTE_Breakout_Test/Core/Src/: adc.c  gpio.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c
esp32-whimsy/esp32-blinky/: Cargo.toml
esp32_blinky/: Cargo.toml
esp32c6_wokwi/: Cargo.toml  diagram.json  wokwi.toml
h723-rust-blinky/: Cargo.toml  memory.x  scratch.txt
h723-rust-blinky/src/: main.rs
nucleo_h723_test/: .cproject  .project  nucleo_h723_test Debug.launch  nucleo_h723_test.ioc
nucleo_h723_test/Core/Src/: main.c
nucleo_h723_test/Debug/: makefile  nucleo_h723_test.elf  nucleo_h723_test.list  nucleo_h723_test.map
nucleo_h723_test/Debug/Core/Src/: main.cyclo  main.su
rust-qemu-test/: Cargo.toml
