[package]
edition = "2021"
name    = "esp32_blinky"
version = "0.1.0"

[[bin]]
name = "esp32_blinky"
path = "./src/bin/main.rs"

[dependencies]
esp-backtrace = { version = "0.15.0", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c6", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c6", "log"] }
log = { version = "0.4.21" }
esp-hal-smartled= { version = "0.16.0" }
smart-leds = { version = "0.4.0" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
